css/srsk-v2.webflow.css
@font-face {
  font-family: Opensans Variablefont Wdth Wght;
  src: url('../fonts/OpenSans-VariableFont_wdthwght.ttf') format("truetype");
  font-weight: 300 800;
  font-style: normal;
  font-display: swap;
}

:root {
  --body: #f6fcf4;
  --font-primary: "Open Sans", sans-serif;
  --font-secondary: "Cormorant Garamond", sans-serif;
  --desktop-72px: 2.7rem;
  --desktop-48px: 1.8rem;
  --desktop-32px: 1.2rem;
  --desktop-26px: 1rem;
  --color-primary_green: #155915;
  --bg-light: #e7f2e3;
  --desktop-40px: 1.5rem;
  --brand: #ffa30b;
  --desktop-20px: .769231rem;
  --body-txt: #212322;
  --color-primary_orange: #ffa30b;
  --border-radius-100px: 3.8rem;
  --icon-24px: .923077rem;
  --24px: .923077rem;
  --body-txt-light: #e8e0da;
  --desktop-mw-1067px: 41.0385rem;
  --transparent: #ddd0;
}

body {
  background-color: var(--body);
  font-family: var(--font-primary);
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.2;
}

h2 {
  font-family: var(--font-secondary);
  font-size: var(--desktop-72px);
  letter-spacing: .135rem;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 400;
  line-height: .89;
}

h3 {
  font-family: var(--font-secondary);
  font-size: var(--desktop-48px);
  letter-spacing: .09rem;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 500;
  line-height: 1.1;
}

h4 {
  font-family: var(--font-primary);
  font-size: var(--desktop-32px);
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  line-height: 1.375;
}

p {
  font-size: var(--desktop-26px);
  color: inherit;
  margin-bottom: 0;
  font-weight: 300;
  line-height: 1.3;
}

a {
  color: var(--color-primary_green);
  text-transform: none;
  border-bottom: 1px solid #1559154d;
  font-weight: 400;
  text-decoration: none;
}

ol {
  grid-column-gap: 1.53846rem;
  grid-row-gap: 1.53846rem;
  flex-flow: column;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 40px;
  display: flex;
}

li {
  margin-left: -18px;
}

img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

strong {
  font-weight: 600;
}

.section {
  padding-left: 5%;
  padding-right: 5%;
  position: relative;
}

.section.hidden {
  overflow: hidden;
}

.section.bg-light {
  background-color: var(--bg-light);
}

.section.nopadding {
  padding-left: 0%;
  padding-right: 0%;
}

.section.section__green {
  background-color: var(--color-primary_green);
  color: var(--body);
}

.section.hero {
  z-index: 1;
  width: 100vw;
  height: 150vh;
}

.section.norightpadding {
  padding-left: 5%;
  padding-right: 0%;
}

.section.inner-cover {
  color: var(--body);
  padding-bottom: 4.66667svw;
  padding-left: 0%;
  padding-right: 0%;
  justify-content: center;
  align-items: flex-end;
  width: 100%;
  min-height: 55svh;
  padding-inline: 6svw;
  display: flex;
}

.section.nopr {
  padding-right: 0%;
}

.container {
  flex-flow: column;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  max-width: 1920px;
}

.container.mw---92ch {
  max-width: 92ch;
}

.container.mw---1200px {
  max-width: 46rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.container.cp {
  margin-inline: auto;
}

.title---26px {
  font-size: var(--desktop-26px);
  font-weight: 700;
}

.subtitle {
  font-family: var(--font-secondary);
  font-size: var(--desktop-40px);
  font-style: italic;
  font-weight: 400;
}

.subtitle.mw---1300px {
  max-width: 64ch;
}

.subtitle.mw---1400px {
  max-width: 80ch;
}

.subtitle._40ch {
  width: 44ch;
}

.hero-logo_link {
  border-bottom-style: none;
  width: 8rem;
  display: inline-block;
}

.link-out {
  color: var(--color-primary_green);
  text-transform: none;
  border-style: none none solid;
  border-width: 1px;
  border-top-color: #000;
  border-bottom-color: #15591580;
  border-right-color: #000;
  border-left-color: inherit;
  text-decoration: none;
  display: inline-flex;
}

.link-out:hover {
  color: var(--color-primary_green);
  border-bottom-color: #15581580;
}

.link-out.opacity-underline {
  border-bottom-color: #f6fcf44d;
}

.link-out.opacity-underline.mb-10px {
  margin-bottom: 10px;
}

.link-out.base {
  color: var(--color-primary_green);
  text-transform: none;
  font-size: 1rem;
}

.link-out.base:hover {
  color: var(--brand);
  border-bottom-color: #14581480;
}

.anchor-link {
  border-bottom-style: dashed;
  border-bottom-width: 1px;
  border-bottom-color: inherit;
  font-weight: 400;
}

.anchor-link.base {
  color: var(--color-primary_green);
  text-transform: none;
  border-bottom-color: #15591580;
  font-size: 1rem;
}

.anchor-link.base:hover {
  color: var(--brand);
}

.anchor-link.base._30px {
  font-size: 1.15385rem;
}

.anchor-link.base._30px:hover {
  color: var(--brand);
}

.anchor-link._30px {
  font-size: 1.15rem;
}

.text---20px {
  font-size: var(--desktop-20px);
}

.outline---btn {
  grid-column-gap: 4px;
  grid-row-gap: 4px;
  text-transform: uppercase;
  border-style: solid;
  border-width: 1px;
  border-left-color: inherit;
  border-right-color: inherit;
  border-top-color: inherit;
  border-bottom-color: inherit;
  color: inherit;
  border-radius: 100rem;
  justify-content: flex-start;
  align-items: center;
  padding: .4rem 1.2em;
  font-size: .8rem;
  display: inline-flex;
}

.outline---btn:hover {
  border-top-color: var(--brand);
  border-right-color: var(--brand);
  border-bottom-color: var(--brand);
  border-left-color: var(--brand);
  background-color: var(--brand);
  color: inherit;
  border-radius: 100rem;
}

.outline---btn.fill {
  background-color: var(--body-txt);
  border-style: none;
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

.outline---btn.fill:hover {
  color: #fff;
}

.outline---btn.invert {
  display: none;
}

.outline---btn.glass_button {
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  background-color: #ffffff30;
  border-color: #e8e0da;
  padding: .75em 1.6em;
  font-weight: 300;
}
/* ... */

